feat: Implement comprehensive password management features, including password reset, candidate identity verification, and update authentication to use email and password.

--- a/package.json
+++ b/package.json
@@ -9,6 +9,9 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "bcryptjs": "^3.0.3",
+    "dotenv": "^17.3.1",
+    "jsonwebtoken": "^9.0.3",
     "mongodb": "^7.1.0",
     "next": "16.1.6",
     "react": "19.2.3",
